--- a/src/components/HeaderSection/styles.module.css
+++ b/src/components/HeaderSection/styles.module.css
@@ -34,7 +34,9 @@
 
 .title {
   font-family: 'Pacifico', cursive;
-  font-size: 5vw; }
+  font-size: 5vw;
+  margin: 0 auto;
+  width: 40vw; }
 
 @media screen and (min-width: 720px) {
   .title {
