--- a/src/components/HeaderSection/styles.module.scss
+++ b/src/components/HeaderSection/styles.module.scss
@@ -39,6 +39,8 @@
 .title {
   font-family: 'Pacifico', cursive;
   font-size: 5vw;
+  margin: 0 auto;
+  width: 40vw;
 }
 
 @media screen and (min-width: 720px) {
