--- a/src/components/HeaderSection/styles.module.scss
+++ b/src/components/HeaderSection/styles.module.scss
@@ -8,10 +8,10 @@
 }
 
 .background {
-  backdrop-filter: blur(2px);
-  -webkit-backdrop-filter: blur(2px);
+  filter: blur(2px);
+  -webkit-filter: blur(2px);
   height: 120%;
-  left: 0;
+  right: 0;
   opacity: 0.5;
   position: absolute;
   top: 0;
@@ -33,7 +33,7 @@
   border-radius: 40vw;
   height: 40vw;
   margin-top: 15vh;
-  max-height: 400px;
+  max-height: 350px;
 }
 
 .title {
