--- a/src/components/Language/styles.module.css
+++ b/src/components/Language/styles.module.css
@@ -21,10 +21,19 @@
 
 .name {
   display: inline-block;
-  font-size: 4.15vw;
+  font-size: 2.49vw;
   line-height: normal;
   vertical-align: middle; }
 
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 720px) {
+  .logo {
+    height: 60px;
+    width: 60px;
+    margin: 6px 30px; }
+  .overlay {
+    bottom: 75px;
+    height: 72px;
+    line-height: 72px;
+    margin-bottom: -60px; }
   .name {
-    font-size: 24px; } }
+    font-size: 18px; } }
