--- a/src/components/LanguageSection/styles.module.scss
+++ b/src/components/LanguageSection/styles.module.scss
@@ -1,6 +1,8 @@
 .languages {
   align-items: center;
   display: flex;
+  margin: 0 auto;
+  max-width: 720px;
   padding-bottom: -2vw;
   padding-top: 2vw;
   height: 100%;
@@ -14,7 +16,7 @@
 .sectionTitle {
   font-family: 'Pacifico', cursive;
   font-size: 5vw;
-  padding: 16px;
+  padding: 2.2vw;
   text-align: center;
 
   &:hover {
