--- a/src/components/ProjectSection/styles.module.scss
+++ b/src/components/ProjectSection/styles.module.scss
@@ -1,5 +1,8 @@
+$baseSizeVw: 10vw;
+$baseSizePx: 72px;
+
 .circleSection {
-  margin-top: -45vw;
+  margin-top: -4.5 * $baseSizeVw;
   z-index: -1;
 }
 
@@ -10,8 +13,8 @@
 
 .sectionTitle {
   font-family: 'Pacifico', cursive;
-  font-size: 5vw;
-  padding: 16px;
+  font-size: 0.5 * $baseSizeVw;
+  padding: 0.22 * $baseSizeVw;
   text-align: center;
 
   &:hover {
@@ -21,18 +24,18 @@
 }
 
 .sectionTitleCircle {
-  border-radius: 40vw;
+  border-radius: 4 * $baseSizeVw;
   display: block;
   font-family: 'Pacifico', cursive;
-  font-size: 5vw;
-  height: 40vw;
-  line-height: 40vw;
+  font-size: 0.5 * $baseSizeVw;
+  height: 4 * $baseSizeVw;
+  line-height: 4 * $baseSizeVw;
   margin: 0 auto;
-  padding: 16px;
+  padding: 0.22 * $baseSizeVw;
   position: relative;
   text-align: center;
-  top: 62.5vw;
-  width: 40vw;
+  top: 6.25 * $baseSizeVw;
+  width: 4 * $baseSizeVw;
   z-index: 1;
 
   &:hover {
@@ -41,36 +44,66 @@
   }
 }
 
-@media screen and (min-width: 720px) {
-  .sectionTitle {
-     font-size: 36px;
-  }
-
-  .sectionTitleCircle {
-     font-size: 36px;
-  }
-}
-
 .iconRow {
   display: flex;
   justify-content: space-evenly;
-  padding: 5vw;
-  width: 90vw;
+  margin: 0 auto;
+  padding: 0.5 * $baseSizeVw;
+  width: 9 * $baseSizeVw;
   z-index: -1;
 }
 
 .iconRowMedium {
   display: flex;
   justify-content: space-between;
-  padding: 2vw 10vw 7vw 10vw;
-  width: 80vw;
+  margin: 0 auto;
+  padding: 0.2 * $baseSizeVw $baseSizeVw 0.7 * $baseSizeVw $baseSizeVw;
+  width: 8 * $baseSizeVw;
   z-index: -1;
 }
 
 .iconRowWide {
   display: flex;
   justify-content: space-between;
-  padding: 3vw 10vw;
-  width: 80vw;
+  margin: 0 auto;
+  padding: 0.3 * $baseSizeVw $baseSizeVw;
+  width: 8 * $baseSizeVw;
   z-index: -1;
+}
+
+@media screen and (min-width: 720px) {
+  .circleSection {
+    margin-top: -4.5 * $baseSizePx;
+  }
+
+  .sectionTitle {
+    font-size: 0.5 * $baseSizePx;
+    padding: 0.22 * $baseSizePx;
+  }
+
+  .sectionTitleCircle {
+    border-radius: 4 * $baseSizePx;
+    font-size: 0.5 * $baseSizePx;
+    height: 4 * $baseSizePx;
+    line-height: 4 * $baseSizePx;
+    padding: 0.22 * $baseSizePx;
+    top: 6.25 * $baseSizePx;
+    width: 4 * $baseSizePx;
+  }
+
+  .iconRow {
+    justify-content: space-evenly;
+    padding: 0.5 * $baseSizePx;
+    width: 9 * $baseSizePx;
+  }
+
+  .iconRowMedium {
+    padding: 0.2 * $baseSizePx $baseSizePx 0.7 * $baseSizePx $baseSizePx;
+    width: 8 * $baseSizePx;
+  }
+
+  .iconRowWide {
+    padding: 0.3 * $baseSizePx $baseSizePx;
+    width: 8 * $baseSizePx;
+  }
 }
