--- a/src/components/ProjectSection/styles.module.scss
+++ b/src/components/ProjectSection/styles.module.scss
@@ -34,7 +34,7 @@ $baseSizePx: 72px;
   padding: 0.22 * $baseSizeVw;
   position: relative;
   text-align: center;
-  top: 6.25 * $baseSizeVw;
+  top: 6.8 * $baseSizeVw;
   width: 4 * $baseSizeVw;
   z-index: 1;
 
@@ -48,16 +48,7 @@ $baseSizePx: 72px;
   display: flex;
   justify-content: space-evenly;
   margin: 0 auto;
-  padding: 0.5 * $baseSizeVw;
-  width: 9 * $baseSizeVw;
-  z-index: -1;
-}
-
-.iconRowMedium {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 auto;
-  padding: 0.2 * $baseSizeVw $baseSizeVw 0.7 * $baseSizeVw $baseSizeVw;
+  padding: 0.5 * $baseSizeVw 1 * $baseSizeVw;
   width: 8 * $baseSizeVw;
   z-index: -1;
 }
@@ -66,8 +57,8 @@ $baseSizePx: 72px;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  padding: 0.3 * $baseSizeVw $baseSizeVw;
-  width: 8 * $baseSizeVw;
+  padding: 0 * $baseSizeVw 0.4 * $baseSizeVw;
+  width: 9.2 * $baseSizeVw;
   z-index: -1;
 }
 
@@ -87,23 +78,18 @@ $baseSizePx: 72px;
     height: 4 * $baseSizePx;
     line-height: 4 * $baseSizePx;
     padding: 0.22 * $baseSizePx;
-    top: 6.25 * $baseSizePx;
+    top: 6.8 * $baseSizePx;
     width: 4 * $baseSizePx;
   }
 
   .iconRow {
     justify-content: space-evenly;
-    padding: 0.5 * $baseSizePx;
-    width: 9 * $baseSizePx;
-  }
-
-  .iconRowMedium {
-    padding: 0.2 * $baseSizePx $baseSizePx 0.7 * $baseSizePx $baseSizePx;
+    padding: 0.5 * $baseSizePx 1 * $baseSizePx;
     width: 8 * $baseSizePx;
   }
 
   .iconRowWide {
-    padding: 0.3 * $baseSizePx $baseSizePx;
-    width: 8 * $baseSizePx;
+    padding: 0 * $baseSizePx 0.4 * $baseSizePx;
+    width: 9.2 * $baseSizePx;
   }
 }
