Add Intro Text, modal scroll click

--- a/src/components/Job/styles.module.css
+++ b/src/components/Job/styles.module.css
@@ -83,6 +83,8 @@ a {
   position: absolute;
   right: 45px;
   width: 24px; }
+  .more:hover {
+    cursor: pointer; }
 
 .bottomSection {
   bottom: 0;
