--- a/src/components/Project/styles.module.scss
+++ b/src/components/Project/styles.module.scss
@@ -112,6 +112,11 @@ a {
   position: absolute;
   right: 45px;
   width: 24px;
+  z-index: 3;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .bottomSection {
