--- a/src/components/HeaderSection/styles.module.css
+++ b/src/components/HeaderSection/styles.module.css
@@ -2,7 +2,7 @@
   color: #FFFFFF;
   height: 90vh;
   overflow: hidden;
-  padding: 24px;
+  padding: 5vw;
   position: relative;
   text-align: center; }
 
@@ -17,6 +17,7 @@
   width: 120%; }
 
 .overlay {
+  animation: driftDown 15s infinite, driftSideways 5s infinite;
   background-color: none;
   height: 120%;
   left: 0;
@@ -25,6 +26,18 @@
   top: 0;
   width: 120%;
   z-index: 1; }
+
+@keyframes driftDown {
+  0%, 100% {
+    top: -12vw; }
+  50% {
+    top: 0vw; } }
+
+@keyframes driftSideways {
+  0%, 100% {
+    left: 1vw; }
+  50% {
+    left: 4vw; } }
 
 .profilePic {
   border-radius: 40vw;
@@ -35,21 +48,9 @@
 .title {
   font-family: 'Pacifico', cursive;
   font-size: 5vw;
-  margin: 0 auto;
+  margin: 1.5vw auto;
   width: 40vw; }
 
 @media screen and (min-width: 720px) {
   .title {
     font-size: 36px; } }
-
-.canvas {
-  margin: -5vw auto;
-  margin-bottom: -10vw;
-  width: 75%; }
-
-.intro {
-  font-size: 2.5vw; }
-
-@media screen and (min-width: 720px) {
-  .intro {
-    font-size: 18px; } }
