--- a/src/components/School/styles.module.css
+++ b/src/components/School/styles.module.css
@@ -87,6 +87,8 @@ a {
   position: absolute;
   right: 45px;
   width: 24px; }
+  .more:hover {
+    cursor: pointer; }
 
 .bottomSection {
   bottom: 0;
