--- a/src/components/IntroText/styles.module.css
+++ b/src/components/IntroText/styles.module.css
@@ -31,23 +31,8 @@
   white-space: nowrap;
   top: 0;
   left: 0;
-  /*animation*/
-  -webkit-animation: move 10s;
-  -moz-animation: move 10s;
-  -ms-animation: move 10s;
-  -o-animation: move 10s;
   animation: move 10s;
-  /*animation-iteration-count*/
-  -webkit-animation-iteration-count: infinite;
-  -moz-animation-iteration-count: infinite;
-  -ms-animation-iteration-count: infinite;
-  -o-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  /*animation-delay*/
-  -webkit-animation-delay: 2s;
-  -moz-animation-delay: 2s;
-  -ms-animation-delay: 2s;
-  -o-animation-delay: 2s;
   animation-delay: 2s; }
 
 .word {
@@ -74,56 +59,18 @@
 
 @media screen and (min-width: 720px) {
   .container {
-    display: flex;
     font-size: 21.6px;
     height: 36px;
-    margin: 0 auto;
     padding-left: 72px;
     padding-top: 21.6px;
-    position: relative;
-    text-align: center;
     width: 360px; }
   .anchor {
     height: 36px;
-    left: 0;
-    margin: 0;
-    position: relative;
-    top: 0;
     width: 57.6px; }
   .rotateSection {
-    float: left;
-    overflow: hidden;
-    position: relative;
-    height: 36px;
-    top: 0; }
-  .cycleWords {
-    display: inline-block;
-    color: lime;
-    position: relative;
-    white-space: nowrap;
-    top: 0;
-    left: 0;
-    /*animation*/
-    -webkit-animation: move 10s;
-    -moz-animation: move 10s;
-    -ms-animation: move 10s;
-    -o-animation: move 10s;
-    animation: move 10s;
-    /*animation-iteration-count*/
-    -webkit-animation-iteration-count: infinite;
-    -moz-animation-iteration-count: infinite;
-    -ms-animation-iteration-count: infinite;
-    -o-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-    /*animation-delay*/
-    -webkit-animation-delay: 2s;
-    -moz-animation-delay: 2s;
-    -ms-animation-delay: 2s;
-    -o-animation-delay: 2s;
-    animation-delay: 2s; }
+    height: 36px; }
   .word {
-    height: 36px;
-    text-align: left; }
+    height: 36px; }
   @keyframes move {
     0% {
       top: 0; }
