--- a/src/components/ContactItem/styles.module.css
+++ b/src/components/ContactItem/styles.module.css
@@ -11,4 +11,9 @@
 
 .link {
   color: #FFFFFF;
+  font-size: 3vw;
   text-decoration: none; }
+
+@media screen and (min-width: 720px) {
+  .link {
+    font-size: 22px; } }
