--- a/src/components/ContactItem/styles.module.scss
+++ b/src/components/ContactItem/styles.module.scss
@@ -13,5 +13,12 @@
 
 .link {
   color: #FFFFFF;
+  font-size: 3vw;
   text-decoration: none;
+}
+
+@media screen and (min-width: 720px) {
+  .link {
+     font-size: 22px;
+  }
 }
