--- a/src/components/Job/styles.module.css
+++ b/src/components/Job/styles.module.css
@@ -25,7 +25,6 @@ a {
 .overlay {
   align-items: center;
   backdrop-filter: blur(2px);
-  -webkit-backdrop-filter: blur(2px);
   background-color: rgba(40, 40, 40, 0.7);
   bottom: 0;
   display: flex;
@@ -102,3 +101,7 @@ a {
   padding: 10px; }
   .backButton:hover {
     cursor: pointer; }
+
+.backButtonAdjustment {
+  display: inline-block;
+  padding: 8px; }
