--- a/src/components/School/styles.module.css
+++ b/src/components/School/styles.module.css
@@ -25,7 +25,6 @@ a {
 .overlay {
   align-items: center;
   backdrop-filter: blur(2px);
-  -webkit-backdrop-filter: blur(2px);
   background-color: rgba(40, 40, 40, 0.7);
   bottom: 0;
   display: flex;
@@ -68,10 +67,6 @@ a {
   .title {
     font-size: 24px; } }
 
-@media screen and (min-width: 800px) {
-  .title {
-    font-size: 40px; } }
-
 .details {
   padding-bottom: 8px; }
 
@@ -107,5 +102,6 @@ a {
   .backButton:hover {
     cursor: pointer; }
 
-.icon {
-  width: 20vw; }
+.backButtonAdjustment {
+  display: inline-block;
+  padding: 8px; }
