--- a/src/components/School/styles.module.scss
+++ b/src/components/School/styles.module.scss
@@ -28,7 +28,6 @@ a {
 .overlay {
   align-items: center;
   backdrop-filter: blur(2px);
-  -webkit-backdrop-filter: blur(2px);
   background-color: rgba(40, 40, 40, 0.7);
   bottom: 0;
   display: flex;
@@ -80,12 +79,6 @@ a {
   }
 }
 
-@media screen and (min-width: 800px) {
-  .title {
-     font-size: 40px;
-  }
-}
-
 .details {
   padding-bottom: 8px;
 }
@@ -131,6 +124,7 @@ a {
   }
 }
 
-.icon {
-  width: 20vw;
+.backButtonAdjustment {
+  display: inline-block;
+  padding: 8px;
 }
