--- a/src/components/HeaderSection/styles.module.css
+++ b/src/components/HeaderSection/styles.module.css
@@ -1,9 +1,9 @@
 .header {
   color: #FFFFFF;
-  height: 85vh;
+  height: 90vh;
   max-height: 120vw;
   overflow: hidden;
-  padding: 5vw;
+  padding: 2vw;
   position: relative;
   text-align: center; }
 
@@ -29,9 +29,9 @@
 
 @keyframes driftDown {
   0%, 100% {
-    top: -12vw; }
+    top: -12vh; }
   50% {
-    top: 0vw; } }
+    top: 3vh; } }
 
 @keyframes driftSideways {
   0%, 100% {
