--- a/src/components/School/styles.module.css
+++ b/src/components/School/styles.module.css
@@ -37,7 +37,9 @@ a {
 
 .topSection {
   height: 100%;
-  overflow: auto; }
+  overflow: auto;
+  overflow-y: overlay;
+  padding: 0 8px; }
 
 .closeButton {
   background-color: sienna;
