Change header background style and add circle animation

--- a/src/components/EducationSection/styles.module.scss
+++ b/src/components/EducationSection/styles.module.scss
@@ -6,7 +6,7 @@
 .sectionTitle {
   font-family: 'Pacifico', cursive;
   font-size: 5vw;
-  padding: 16px;
+  padding: 2.2vw;
   text-align: center;
 
   &:hover {
