--- a/src/components/EducationSection/styles.module.css
+++ b/src/components/EducationSection/styles.module.css
@@ -5,7 +5,7 @@
 .sectionTitle {
   font-family: 'Pacifico', cursive;
   font-size: 5vw;
-  padding: 16px;
+  padding: 2.2vw;
   text-align: center; }
   .sectionTitle:hover {
     background: rgba(40, 40, 40, 0.8);
