--- a/src/components/HeaderSection/styles.module.scss
+++ b/src/components/HeaderSection/styles.module.scss
@@ -6,89 +6,131 @@
   padding: 2vw;
   position: relative;
   text-align: center;
+  z-index: 0;
 }
 
 .background {
-  filter: blur(2px);
   height: 120%;
-  right: 0;
-  opacity: 0.5;
+  opacity: 0.9;
   position: absolute;
+  right: 0;
   top: 0;
   width: 120%;
+  z-index: 0;
+}
+
+.overlaySet {
+  background: none;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+  z-index: 0;
 }
 
 .overlay1 {
-  animation: driftDown1 180s infinite linear, driftSideways1 3s infinite linear;
-  animation-timing-function: ease-in-out;
-  background-color: none;
-  background-repeat: repeat;
-  background-size: 120vw 100vh;
-  height: 1000%;
-  left: 0;
+  animation: rotate1 5s ease-in-out forwards infinite;
+  height: 120%;
   opacity: 0.8;
   position: absolute;
+  right: 0;
   top: 0;
-  width: 500%;
-  z-index: 2;
+  transform-origin: 82% 40%;
+  width: 120%;
+  z-index: 1;
 }
 
-@keyframes driftDown1 {
+@keyframes rotate1 {
   0% {
-    background-position: -1% 0;
-  }
-  100% {
-    background-position: -1% 100%;
-  }
-}
-
-@keyframes driftSideways1 {
-  0%, 100% {
-    left: 1vw
+    transform: rotate(10deg);
   }
   50% {
-    left: 2vw;
+    transform: rotate(-10deg);
+  }
+  100% {
+    transform: rotate(10deg);
   }
 }
 
 .overlay2 {
-  animation: driftDown2 120s infinite linear, driftSideways2 2s infinite linear;
-  animation-timing-function: ease-in-out;
-  background-color: none;
-  background-repeat: repeat;
-  background-size: 120vw 100vh;
-  height: 1000%;
-  left: 0;
-  opacity: 0.8;
+  animation: rotate2 8s ease-in-out forwards infinite;
+  height: 120%;
+  opacity: 0.5;
   position: absolute;
+  right: 0;
   top: 0;
-  width: 1000%;
+  transform-origin: 25% 40%;
+  width: 120%;
   z-index: 1;
 }
 
-@keyframes driftDown2 {
+@keyframes rotate2 {
   0% {
-    background-position: -1% 10%;
+    transform: rotate(-10deg);
+  }
+  50% {
+    transform: rotate(10deg);
   }
   100% {
-    background-position: -1% 100%;
+    transform: rotate(-10deg);
   }
 }
 
-@keyframes driftSideways2 {
-  0%, 100% {
-    left: -9vw
+.overlay3 {
+  animation: rotate3 3s ease-in-out forwards infinite;
+  height: 120%;
+  opacity: 0.7;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform-origin: 87% 68%;
+  width: 120%;
+  z-index: 1;
+}
+
+@keyframes rotate3 {
+  0% {
+    transform: rotate(-15deg);
   }
   50% {
-    left: -10vw;
+    transform: rotate(15deg);
+  }
+  100% {
+    transform: rotate(-15deg);
+  }
+}
+
+.overlay4 {
+  animation: rotate4 3s ease-in-out forwards infinite;
+  height: 120%;
+  opacity: 0.4;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform-origin: 35% 70%;
+  width: 120%;
+  z-index: 1;
+}
+
+@keyframes rotate4 {
+  0% {
+    transform: rotate(-5deg);
+  }
+  50% {
+    transform: rotate(5deg);
+  }
+  100% {
+    transform: rotate(-5deg);
   }
 }
 
 .profilePic {
-  border-radius: 40vw;
-  height: 40vw;
-  margin-top: 15vh;
+  border-radius: 100%;
+  height: 50%;
+  margin-top: 20vh;
   max-height: 350px;
+  z-index: 3;
 }
 
 .title {
