--- a/src/components/HeaderSection/styles.module.scss
+++ b/src/components/HeaderSection/styles.module.scss
@@ -29,16 +29,20 @@
   z-index: 0;
 }
 
-.overlay1 {
-  animation: rotate1 5s ease-in-out forwards infinite;
+%overlay {
   height: 120%;
-  opacity: 0.8;
   position: absolute;
   right: 0;
   top: 0;
-  transform-origin: 82% 40%;
   width: 120%;
   z-index: 1;
+}
+
+.overlay1 {
+  @extend %overlay;
+  animation: rotate1 5s ease-in-out forwards infinite;
+  opacity: 0.8;
+  transform-origin: 82% 40%;
 }
 
 @keyframes rotate1 {
@@ -54,15 +58,10 @@
 }
 
 .overlay2 {
-  animation: rotate2 10s ease-in-out forwards infinite;
-  height: 120%;
+  @extend %overlay;
+  animation: rotate2 9s ease-in-out forwards infinite;
   opacity: 0.5;
-  position: absolute;
-  right: 0;
-  top: 0;
   transform-origin: 25% 40%;
-  width: 120%;
-  z-index: 1;
 }
 
 @keyframes rotate2 {
@@ -78,15 +77,10 @@
 }
 
 .overlay3 {
-  animation: rotate3 3s ease-in-out forwards infinite;
-  height: 120%;
+  @extend %overlay;
+  animation: rotate3 4.5s ease-in-out forwards infinite;
   opacity: 0.7;
-  position: absolute;
-  right: 0;
-  top: 0;
   transform-origin: 87% 68%;
-  width: 120%;
-  z-index: 1;
 }
 
 @keyframes rotate3 {
@@ -102,39 +96,29 @@
 }
 
 .overlay4 {
+  @extend %overlay;
   animation: rotate4 3s ease-in-out forwards infinite;
-  height: 120%;
   opacity: 0.6;
-  position: absolute;
-  right: 0;
-  top: 0;
   transform-origin: 35% 70%;
-  width: 120%;
-  z-index: 1;
 }
 
 @keyframes rotate4 {
   0% {
-    transform: rotate(-20deg);
+    transform: rotate(-10deg);
   }
   50% {
-    transform: rotate(20deg);
+    transform: rotate(10deg);
   }
   100% {
-    transform: rotate(-20deg);
+    transform: rotate(-10deg);
   }
 }
 
 .overlay5 {
+  @extend %overlay;
   animation: rotate5 4s ease-in-out forwards infinite;
-  height: 120%;
   opacity: 0.5;
-  position: absolute;
-  right: 0;
-  top: 0;
   transform-origin: 45% 10%;
-  width: 120%;
-  z-index: 1;
 }
 
 @keyframes rotate5 {
@@ -150,26 +134,78 @@
 }
 
 .overlay6 {
-  animation: rotate6 2s ease-in-out forwards infinite;
-  height: 120%;
+  @extend %overlay;
+  animation: rotate6 3.5s ease-in-out forwards infinite;
   opacity: 0.7;
-  position: absolute;
-  right: 0;
-  top: 0;
   transform-origin: 77% 10%;
-  width: 120%;
-  z-index: 1;
 }
 
 @keyframes rotate6 {
   0% {
-    transform: rotate(-12deg);
+    transform: rotate(-20deg);
   }
   50% {
-    transform: rotate(12deg);
+    transform: rotate(20deg);
   }
   100% {
-    transform: rotate(-12deg);
+    transform: rotate(-20deg);
+  }
+}
+
+.overlay7 {
+  @extend %overlay;
+  animation: rotate7 5s ease-in-out forwards infinite;
+  opacity: 0.6;
+  transform-origin: 60% 80%;
+}
+
+@keyframes rotate7 {
+  0% {
+    transform: rotate(15deg);
+  }
+  50% {
+    transform: rotate(-15deg);
+  }
+  100% {
+    transform: rotate(15deg);
+  }
+}
+
+.overlay8 {
+  @extend %overlay;
+  animation: rotate8 2.5s ease-in-out forwards infinite;
+  opacity: 0.6;
+  transform-origin: 92% 15%;
+}
+
+@keyframes rotate8 {
+  0% {
+    transform: rotate(22deg);
+  }
+  50% {
+    transform: rotate(-22deg);
+  }
+  100% {
+    transform: rotate(22deg);
+  }
+}
+
+.overlay9 {
+  @extend %overlay;
+  animation: rotate9 2s ease-in-out forwards infinite;
+  opacity: 0.4;
+  transform-origin: 30% 10%;
+}
+
+@keyframes rotate9 {
+  0% {
+    transform: rotate(15deg);
+  }
+  50% {
+    transform: rotate(-15deg);
+  }
+  100% {
+    transform: rotate(15deg);
   }
 }
 
