--- a/src/components/School/styles.module.css
+++ b/src/components/School/styles.module.css
@@ -42,7 +42,7 @@ a {
   padding: 0 8px; }
 
 .closeButton {
-  background-color: sienna;
+  background-color: green;
   border-radius: 8px;
   color: #FFFFFF;
   display: block;
@@ -76,7 +76,20 @@ a {
   padding-top: 50px; }
 
 .bullet {
-  padding-bottom: 16px; }
+  padding-bottom: 6px; }
+
+.lineContainer {
+  animation-delay: 1s;
+  height: 8px;
+  margin: 0 auto;
+  width: 10vw; }
+  .lineContainer:last-child {
+    display: none; }
+
+.line {
+  margin: 0 auto;
+  stroke-width: 4px;
+  stroke: black; }
 
 .more {
   bottom: 2vh;
@@ -96,7 +109,7 @@ a {
   width: 100%; }
 
 .backButton {
-  background-color: sienna;
+  background-color: green;
   border-radius: 8px;
   color: #FFFFFF;
   margin: 8px;
