--- a/src/components/School/styles.module.scss
+++ b/src/components/School/styles.module.scss
@@ -47,7 +47,7 @@ a {
 }
 
 .closeButton {
-  background-color: sienna;
+  background-color: green;
   border-radius: 8px;
   color: #FFFFFF;
   display: block;
@@ -90,7 +90,24 @@ a {
 }
 
 .bullet {
-  padding-bottom: 16px;
+  padding-bottom: 6px;
+}
+
+.lineContainer {
+  animation-delay: 1s;
+  height: 8px;
+  margin: 0 auto;
+  width: 10vw;
+
+  &:last-child {
+    display: none;
+  }
+}
+
+.line {
+  margin: 0 auto;
+  stroke-width: 4px;
+  stroke: black;
 }
 
 .more {
@@ -115,7 +132,7 @@ a {
 }
 
 .backButton {
-  background-color: sienna;
+  background-color: green;
   border-radius: 8px;
   color: #FFFFFF;
   margin: 8px;
