--- a/src/components/Project/styles.module.scss
+++ b/src/components/Project/styles.module.scss
@@ -65,6 +65,7 @@ a {
 }
 
 .icon {
+  max-width: 200px;
   width: 20vw;
 }
 
@@ -78,6 +79,12 @@ a {
 @media screen and (max-width: 480px) {
   .title {
      font-size: 24px;
+  }
+}
+
+@media screen and (min-width: 960px) {
+  .title {
+     font-size: 48px;
   }
 }
 
