--- a/src/components/School/styles.module.css
+++ b/src/components/School/styles.module.css
@@ -57,6 +57,7 @@ a {
     cursor: pointer; }
 
 .icon {
+  max-width: 200px;
   width: 20vw; }
 
 .title {
@@ -68,6 +69,10 @@ a {
 @media screen and (max-width: 480px) {
   .title {
     font-size: 24px; } }
+
+@media screen and (min-width: 960px) {
+  .title {
+    font-size: 48px; } }
 
 .details {
   padding-bottom: 8px; }
