--- a/src/components/Job/styles.module.scss
+++ b/src/components/Job/styles.module.scss
@@ -47,7 +47,7 @@ a {
 }
 
 .closeButton {
-  background-color: green;
+  background-color: mediumpurple;
   border-radius: 8px;
   color: #FFFFFF;
   display: block;
@@ -139,7 +139,7 @@ a {
 }
 
 .backButton {
-  background-color: green;
+  background-color: mediumpurple;
   border-radius: 8px;
   color: #FFFFFF;
   margin: 8px;
