--- a/src/components/Project/styles.module.scss
+++ b/src/components/Project/styles.module.scss
@@ -47,7 +47,7 @@ a {
 }
 
 .closeButton {
-  background-color: green;
+  background-color: mediumpurple;
   border-radius: 8px;
   color: #FFFFFF;
   display: block;
@@ -93,7 +93,7 @@ a {
 }
 
 .link {
-  background-color: green;
+  background-color: mediumpurple;
   border-radius: 8px;
   color: #FFFFFF;
   display: block;
@@ -154,7 +154,7 @@ a {
 }
 
 .backButton {
-  background-color: green;
+  background-color: mediumpurple;
   border-radius: 8px;
   color: #FFFFFF;
   margin: 8px;
