--- a/src/components/EducationSection/styles.module.css
+++ b/src/components/EducationSection/styles.module.css
@@ -1,6 +1,5 @@
 .titleSection {
-  margin: 2vw 0;
-  padding: 2vw 0; }
+  padding: 4vw 0; }
 
 .sectionTitle {
   font-family: 'Pacifico', cursive;
@@ -13,7 +12,8 @@
 
 @media screen and (min-width: 720px) {
   .sectionTitle {
-    font-size: 36px; } }
+    font-size: 36px;
+    padding: 15.84px; } }
 
 .iconRow {
   display: flex;
