--- a/src/components/LanguageSection/styles.module.scss
+++ b/src/components/LanguageSection/styles.module.scss
@@ -1,22 +1,24 @@
+$baseSizeVw: 10vw;
+$baseSizePx: 72px;
+
 .languages {
   align-items: center;
   display: flex;
   margin: 0 auto;
   max-width: 720px;
-  padding-bottom: -2vw;
-  padding-top: 2vw;
+  padding-bottom: -0.2 * $baseSizeVw;
+  padding-top: 0.2 * $baseSizeVw;
   height: 100%;
 }
 
 .titleSection {
-  margin: 2vw 0;
-  padding: 2vw 0;
+  padding: 0.4 * $baseSizeVw 0;
 }
 
 .sectionTitle {
   font-family: 'Pacifico', cursive;
-  font-size: 5vw;
-  padding: 2.2vw;
+  font-size: 0.5 * $baseSizeVw;
+  padding: 0.22 * $baseSizeVw;
   text-align: center;
 
   &:hover {
@@ -27,6 +29,7 @@
 
 @media screen and (min-width: 720px) {
   .sectionTitle {
-     font-size: 36px;
-   }
+    font-size: 0.5 * $baseSizePx;
+    padding: 0.22 * $baseSizePx;
+  }
 }
