--- a/src/components/School/styles.module.css
+++ b/src/components/School/styles.module.css
@@ -42,7 +42,7 @@ a {
   padding: 0 8px; }
 
 .closeButton {
-  background-color: green;
+  background-color: mediumpurple;
   border-radius: 8px;
   color: #FFFFFF;
   display: block;
@@ -114,7 +114,7 @@ a {
   width: 100%; }
 
 .backButton {
-  background-color: green;
+  background-color: mediumpurple;
   border-radius: 8px;
   color: #FFFFFF;
   margin: 8px;
