--- a/src/components/PreviewIcon/styles.module.scss
+++ b/src/components/PreviewIcon/styles.module.scss
@@ -6,7 +6,7 @@ $tileSizePx: 144px;
   background: radial-gradient(circle farthest-side at center, white 0%, #444444 100%);
   border-radius: $tileSizeVw;
   display: flex;
-  font-family: Helvetica;
+  font-family: 'Lato', sans-serif;
   height: $tileSizeVw;
   padding: 0.1 * $tileSizeVw;
   width: $tileSizeVw;
