--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -1,7 +1,7 @@
 .app {
   background-color: #444444;
   color: #FFFFFF;
-  font-family: Helvetica; }
+  font-family: 'Lato', sans-serif; }
 
 .main {
   background-color: #444444; }
