--- a/src/components/EducationSection/styles.module.css
+++ b/src/components/EducationSection/styles.module.css
@@ -2,8 +2,8 @@
   padding: 4vw 0; }
 
 .sectionTitle {
-  font-family: 'Pacifico', cursive;
-  font-size: 5vw;
+  font-family: 'Prompt', sans-serif;
+  font-size: 6vw;
   padding: 2.2vw;
   text-align: center; }
   .sectionTitle:hover {
@@ -12,7 +12,7 @@
 
 @media screen and (min-width: 720px) {
   .sectionTitle {
-    font-size: 36px;
+    font-size: 43.2px;
     padding: 15.84px; } }
 
 .iconRow {
