--- a/src/components/FooterSection/styles.module.css
+++ b/src/components/FooterSection/styles.module.css
@@ -17,11 +17,11 @@
   z-index: -1; }
 
 .footerTitle {
-  font-family: 'Pacifico', cursive;
-  font-size: 5vw;
+  font-family: 'Prompt', sans-serif;
+  font-size: 6vw;
   padding: 16px;
   text-align: center; }
 
 @media screen and (min-width: 720px) {
   .footerTitle {
-    font-size: 36px; } }
+    font-size: 43.2px; } }
