--- a/src/components/HeaderSection/styles.module.css
+++ b/src/components/HeaderSection/styles.module.css
@@ -12,158 +12,24 @@
   height: 120%;
   opacity: 0.9;
   position: absolute;
-  right: 0;
+  left: -15%;
   top: 0;
   width: 120%;
   z-index: 0; }
-
-.overlaySet {
-  background: none;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 100%;
-  z-index: 0; }
-
-.overlay1, .overlay2, .overlay3, .overlay4, .overlay5, .overlay6, .overlay7, .overlay8, .overlay9 {
-  height: 120%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 120%;
-  z-index: 1; }
-
-.overlay1 {
-  animation: rotate1 5s ease-in-out forwards infinite;
-  opacity: 0.8;
-  transform-origin: 82% 40%; }
-
-@keyframes rotate1 {
-  0% {
-    transform: rotate(10deg); }
-  50% {
-    transform: rotate(-10deg); }
-  100% {
-    transform: rotate(10deg); } }
-
-.overlay2 {
-  animation: rotate2 9s ease-in-out forwards infinite;
-  opacity: 0.5;
-  transform-origin: 25% 40%; }
-
-@keyframes rotate2 {
-  0% {
-    transform: rotate(-18deg); }
-  50% {
-    transform: rotate(18deg); }
-  100% {
-    transform: rotate(-18deg); } }
-
-.overlay3 {
-  animation: rotate3 4.5s ease-in-out forwards infinite;
-  opacity: 0.7;
-  transform-origin: 87% 68%; }
-
-@keyframes rotate3 {
-  0% {
-    transform: rotate(-15deg); }
-  50% {
-    transform: rotate(15deg); }
-  100% {
-    transform: rotate(-15deg); } }
-
-.overlay4 {
-  animation: rotate4 3s ease-in-out forwards infinite;
-  opacity: 0.6;
-  transform-origin: 35% 70%; }
-
-@keyframes rotate4 {
-  0% {
-    transform: rotate(-10deg); }
-  50% {
-    transform: rotate(10deg); }
-  100% {
-    transform: rotate(-10deg); } }
-
-.overlay5 {
-  animation: rotate5 4s ease-in-out forwards infinite;
-  opacity: 0.5;
-  transform-origin: 45% 10%; }
-
-@keyframes rotate5 {
-  0% {
-    transform: rotate(-15deg); }
-  50% {
-    transform: rotate(15deg); }
-  100% {
-    transform: rotate(-15deg); } }
-
-.overlay6 {
-  animation: rotate6 3.5s ease-in-out forwards infinite;
-  opacity: 0.7;
-  transform-origin: 77% 10%; }
-
-@keyframes rotate6 {
-  0% {
-    transform: rotate(-20deg); }
-  50% {
-    transform: rotate(20deg); }
-  100% {
-    transform: rotate(-20deg); } }
-
-.overlay7 {
-  animation: rotate7 5s ease-in-out forwards infinite;
-  opacity: 0.6;
-  transform-origin: 60% 80%; }
-
-@keyframes rotate7 {
-  0% {
-    transform: rotate(15deg); }
-  50% {
-    transform: rotate(-15deg); }
-  100% {
-    transform: rotate(15deg); } }
-
-.overlay8 {
-  animation: rotate8 2.5s ease-in-out forwards infinite;
-  opacity: 0.6;
-  transform-origin: 92% 15%; }
-
-@keyframes rotate8 {
-  0% {
-    transform: rotate(22deg); }
-  50% {
-    transform: rotate(-22deg); }
-  100% {
-    transform: rotate(22deg); } }
-
-.overlay9 {
-  animation: rotate9 2s ease-in-out forwards infinite;
-  opacity: 0.4;
-  transform-origin: 30% 10%; }
-
-@keyframes rotate9 {
-  0% {
-    transform: rotate(15deg); }
-  50% {
-    transform: rotate(-15deg); }
-  100% {
-    transform: rotate(15deg); } }
 
 .profilePic {
   border-radius: 100%;
+  filter: grayscale(50%);
   height: 50%;
-  margin-top: 20vh;
+  margin-top: 15vh;
   max-height: 350px;
   z-index: 3; }
 
 .title {
-  font-family: 'Pacifico', cursive;
-  font-size: 5vw;
-  margin: 1.5vw auto;
-  width: 40vw; }
+  font-family: 'Prompt', sans-serif;
+  font-size: 7.5vw;
+  margin: 1.5vw auto; }
 
 @media screen and (min-width: 720px) {
   .title {
-    font-size: 36px; } }
+    font-size: 54px; } }
