--- a/src/components/NavBar/styles.module.css
+++ b/src/components/NavBar/styles.module.css
@@ -1,6 +1,8 @@
 .navbar {
-  background-color: black;
+  background-color: #444444;
+  border-bottom: solid 2px black;
   display: flex;
+  font-family: 'Alegreya Sans SC', sans-serif;
   justify-content: space-evenly;
   position: fixed;
   top: 0;
@@ -15,6 +17,6 @@
     background: rgba(100, 100, 100, 0.8);
     cursor: pointer; }
 
-@media screen and (min-width: 1800px) {
+@media screen and (min-width: 1000px) {
   .navbarItem {
-    font-size: 36px; } }
+    font-size: 20px; } }
