--- a/src/components/Project/styles.module.css
+++ b/src/components/Project/styles.module.css
@@ -5,7 +5,7 @@ a {
   background: #FFFFFF;
   border-radius: 4vw;
   box-shadow: 0 0 7px 0 black;
-  font-family: Helvetica;
+  font-family: 'Lato', sans-serif;
   height: 75vh;
   padding: 45px;
   position: relative;
@@ -62,7 +62,7 @@ a {
 
 .title {
   color: black;
-  font-family: 'Pacifico', cursive;
+  font-family: 'Prompt', sans-serif;
   font-size: 5vw;
   margin-bottom: 20px; }
 
