--- a/src/components/Project/styles.module.scss
+++ b/src/components/Project/styles.module.scss
@@ -6,7 +6,7 @@ a {
   background: #FFFFFF;
   border-radius: 4vw;
   box-shadow: 0 0 7px 0 black;
-  font-family: Helvetica;
+  font-family: 'Lato', sans-serif;
   height: 75vh;
   padding: 45px;
   position: relative;
@@ -71,7 +71,7 @@ a {
 
 .title {
   color: black;
-  font-family: 'Pacifico', cursive;
+  font-family: 'Prompt', sans-serif;
   font-size: 5vw;
   margin-bottom: 20px;
 }
