--- a/src/components/FooterSection/styles.module.css
+++ b/src/components/FooterSection/styles.module.css
@@ -17,7 +17,7 @@
   z-index: -1; }
 
 .footerTitle {
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Acme', sans-serif;
   font-size: 6vw;
   padding: 16px;
   text-align: center; }
