--- a/src/components/FooterSection/styles.module.scss
+++ b/src/components/FooterSection/styles.module.scss
@@ -22,7 +22,7 @@ $baseSizePx: 72px;
 }
 
 .footerTitle {
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Acme', sans-serif;
   font-size: 0.6 * $baseSizeVw;
   padding: 16px;
   text-align: center;
