--- a/src/components/ExperienceSection/styles.module.css
+++ b/src/components/ExperienceSection/styles.module.css
@@ -6,7 +6,7 @@
   padding: 4vw 0; }
 
 .sectionTitle {
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Acme', sans-serif;
   font-size: 6vw;
   padding: 2.2vw;
   text-align: center; }
@@ -15,7 +15,8 @@
     cursor: pointer; }
 
 .sectionOpen {
-  font-family: 'Prompt', sans-serif; }
+  font-family: 'Acme', sans-serif;
+  margin-top: -15vw; }
 
 .chart {
   display: inline-flex;
@@ -24,7 +25,7 @@
   opacity: 0.8;
   position: relative;
   text-align: center;
-  top: -12vw;
+  top: -7vw;
   width: 100%;
   z-index: -1; }
 
@@ -59,7 +60,7 @@
 .centerTitlePentagon {
   border-radius: 40vw;
   display: block;
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Acme', sans-serif;
   font-size: 6vw;
   height: 40vw;
   line-height: 40vw;
@@ -67,7 +68,7 @@
   padding: 2.2vw;
   position: relative;
   text-align: center;
-  top: 41vw;
+  top: 31vw;
   width: 40vw;
   z-index: 1; }
   .centerTitlePentagon:hover {
@@ -80,6 +81,7 @@
   margin: 0 auto;
   margin-top: -30vw;
   padding: 0;
+  padding-top: 5vw;
   z-index: -1; }
 
 .iconRowMiddle {
@@ -100,8 +102,10 @@
   .sectionTitle {
     font-size: 43.2px;
     padding: 15.84px; }
+  .sectionOpen {
+    margin-top: -108px; }
   .chart {
-    top: -86.4px; }
+    top: -50.4px; }
   .circleDraw {
     height: 396px;
     padding: 15.84px;
@@ -118,15 +122,16 @@
       stroke-dashoffset: 1224px; } }
   .centerTitlePentagon {
     border-radius: 288px;
-    font-family: 'Prompt', sans-serif;
+    font-family: 'Acme', sans-serif;
     font-size: 43.2px;
     height: 288px;
     line-height: 288px;
     padding: 15.84px;
-    top: 295.2px;
+    top: 223.2px;
     width: 288px; }
   .iconRowTop {
     margin-top: -216px;
+    padding-top: 36px;
     width: 720px; }
   .iconRowMiddle {
     padding: 21.6px 43.2px 36px 43.2px;
