--- a/src/components/LanguageSection/styles.module.scss
+++ b/src/components/LanguageSection/styles.module.scss
@@ -16,7 +16,7 @@ $baseSizePx: 72px;
 }
 
 .sectionTitle {
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Acme', sans-serif;
   font-size: 0.6 * $baseSizeVw;
   padding: 0.22 * $baseSizeVw;
   text-align: center;
