--- a/src/components/Project/styles.module.css
+++ b/src/components/Project/styles.module.css
@@ -62,7 +62,7 @@ a {
 
 .title {
   color: black;
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Acme', sans-serif;
   font-size: 5vw;
   margin-bottom: 20px; }
 
